--- a/listen2gether-client/src/app/arena/options/options.component.css
+++ b/listen2gether-client/src/app/arena/options/options.component.css
@@ -9,7 +9,7 @@
 
 #connected {
     height: 4rem;
-    width: 30%;
+    width: 60%;
     position: relative;
     display: flex;
     justify-content: center;
@@ -65,4 +65,16 @@
     grid-template-columns: 2.5rem 1fr;
     align-items: center;
     gap: .5rem;
+}
+
+#leave {
+    all: unset;
+    text-align: center;
+    cursor: pointer;
+    border-radius: .3rem;
+    height: 4rem;
+    aspect-ratio: 1;
+}
+#leave:hover {
+    background-color: #7f848e1e;
 }
