--- a/listen2gether-client/src/styles.css
+++ b/listen2gether-client/src/styles.css
@@ -72,7 +72,7 @@ body {
     width: 95%;
     height: 1.5rem;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding: .2rem 0;
     border-bottom: 1px solid rgba(114, 118, 129, 0.4);
@@ -94,4 +94,35 @@ body {
 .container-title::before, #search-container::before {
     background: linear-gradient(180deg, #242731 32%, rgba(45, 48, 57, 0) 100%);
     bottom: -1.5rem;
+}
+
+
+.loading {
+    width: 1.5rem;
+    aspect-ratio: 1;
+    border: 2px solid #a7acb8;
+    border-top-color: transparent;
+    border-radius: 50%;
+    animation: load 1s linear infinite;
+    margin: 0 4px;
+}
+
+@keyframes load {
+    to {
+        transform: rotate(1turn);
+    }
+}
+
+.loading-title {
+    animation: pulse .5s linear alternate-reverse infinite;
+}
+
+@keyframes pulse {
+    from {
+        opacity: .1;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
