messages self update first then broadcast, pfp and username update fixed

--- a/listen2gether-client/src/app/arena/arena.component.html
+++ b/listen2gether-client/src/app/arena/arena.component.html
@@ -42,7 +42,7 @@
                 id="username" 
                 type="text" 
                 [(ngModel)]="username" 
-                (keyup)="onUsernameChange($event)"
+                (keyup)="usernameUpdate$.next(username!)"
                 >
 
         </div>
