--- a/listen2gether-client/src/app/arena/arena.component.css
+++ b/listen2gether-client/src/app/arena/arena.component.css
@@ -101,78 +101,43 @@ button:active {
     transform: scale(.99)
 }
 
-#profile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 35%;
-    height: 100%;
+#logout {
+    color: inherit;
+    background-color: transparent;
+    position: absolute;
+    width: auto;
+    padding: .5rem;
+    top: 1rem;
+    right: 1rem;
+    font-size: 1rem;
+    font-weight: bolder;
 }
 
-#profile #pfp-container{
-    width: 9rem;
-    aspect-ratio: 1;
-    position: relative;
-    display: grid;
-    place-items: center;
-    border-radius: 50%;
+#logout:hover {
+    transform: none;
+    background-color: rgba(255, 255, 255, .1);
+}
+#logout:active {
+    transform: none;
 }
 
-#profile #pfp {
-    width: 9rem;
-    aspect-ratio: 1;
-    background-color: #afb2ba;
-    color: #242731;
-    font-size: 4rem;
-    display: grid;
-    place-items: center;
-    border-radius: 50%;
-    position: relative;
+#logout:hover p {
+    width: 3.7rem;
 }
 
-#profile #pfp-container #underlay {
-    opacity: 0;
-    z-index: 4;
-    border-radius: 50%;
-    padding: .2rem;
+#logout p {
+    width: 0;
+    overflow: hidden;
+    transition: width .2s;
+}
+
+#loader {
+    grid-row: 1/3;
+    grid-column: 1/4;
     width: 100%;
     height: 100%;
-    transition: .2s;
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.8);
-    color: #a7acb8;
-    backdrop-filter: blur(3px);
-}
-
-#profile button {
-    all: unset;
-    cursor: pointer;
-    transition: .2s;
-}
-#profile button:hover {
-    filter: brightness(1.3);
-}
-
-#profile #pfp-container:hover #underlay {
-    opacity: 1;
-}
-
-#profile #username {
-    all: unset;
-    font-size: 1.8rem;
-    margin: 1.4rem 0 0 0;
-    text-align: center;
-    background-color: transparent;
-    border-radius: .3rem;
-    padding: .5rem .5rem;
-    width: 70%;
-    transition: .2s;
-}
-
-#profile #username:focus {
-    background-color: #242731;
+    display: grid;
+    place-items: center;
+    font-size: 1.3rem;
+    font-weight: bolder;
 }
