--- a/listen2gether-client/src/app/app.component.html
+++ b/listen2gether-client/src/app/app.component.html
@@ -1,1 +1,7 @@
 <router-outlet></router-outlet>
+<div *ngIf="authLoading$ | async" 
+    class="loading-title" 
+    style="width: 96%; height: 96vdh; display: grid; place-items: center;"
+    >
+    Loading
+</div>
