Fix Centered loading animation

--- a/listen2gether-client/src/app/app.component.html
+++ b/listen2gether-client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
 <div *ngIf="(user$ | async) === undefined" 
     class="loading-title" 
-    style="width: 96%; height: 96vdh; display: grid; place-items: center;"
+    style="width: 96%; height: 96dvh; display: grid; place-items: center; font-size: 2rem;"
     >
     Loading
 </div>
