--- a/listen2gether-client/src/app/arena/options/options.component.css
+++ b/listen2gether-client/src/app/arena/options/options.component.css
@@ -78,3 +78,16 @@
 #leave:hover {
     background-color: #7f848e1e;
 }
+
+@media screen and (max-width: 480px) {
+    :host {
+        grid-row: 2/3;
+        width: 100%;
+        align-items: center;
+        align-self: center;
+    }
+    
+    #leave {
+        height: 3rem;
+    }
+}
