--- a/listen2gether-client/src/app/auth/auth.component.css
+++ b/listen2gether-client/src/app/auth/auth.component.css
@@ -129,5 +129,10 @@ button {
     animation: load 1s infinite linear;
 }
 
+@media screen and (max-width: 480px) {
+    form {
+        width: 85%;
+    }
+}
 
 
