--- a/listen2gether-client/src/app/arena/arena.component.css
+++ b/listen2gether-client/src/app/arena/arena.component.css
@@ -11,6 +11,12 @@
     justify-content: space-around;
 }
 
+#containers-container {
+    grid-column: 1/4;
+    grid-row: 1/2;
+    display: contents;
+}
+
 #instruction {
     font-weight: 600;
     font-size: 1.3rem;
@@ -140,4 +146,67 @@ button:active {
     place-items: center;
     font-size: 1.3rem;
     font-weight: bolder;
+}
+
+@media screen and (max-width: 480px) {
+    :host {
+        grid-template-rows: 65% 10% 25%;
+        grid-template-columns: 100%;
+        gap: 0;
+        width: 96%;
+        align-items: end;
+    }
+
+    #front-page {
+        flex-direction: column;
+        justify-content: center;
+        gap: 1rem;
+        height: 100%;
+        grid-row: 1/4;
+    }
+
+    #create-join {
+        height: 50%;
+        width: 95%;
+    }
+
+    #instruction {
+        font-size: 1.2rem;
+        line-height: 1.5rem;
+        font-weight: 200;
+    }
+
+    #inputRoom {
+        width: 100%;
+        height: 2.5rem;
+        margin: 2rem 0 1.5rem 0;
+    }
+    #inputRoom::placeholder {
+        font-size: 1rem;
+    }
+
+    #button-container {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    #or {
+        font-size: .8rem;
+    }
+
+    #containers-container {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        width: 100%;
+        height: 55vh;
+        scroll-snap-type: x mandatory;
+        overflow-x: auto;
+    }
+
+    .container {
+        min-width: 95%;
+        height: 95%;
+        scroll-snap-align: none center;
+    }
 }
